# endless-sky

./: .appveyor.yml  .clang-format  .codespell.exclude  .codespell.words.exclude  .ecrc  .editorconfig  .editorconfig-checker.json  .git-blame-ignore-revs  .gitattributes  .gitignore  .sconsign.dblite  .travis.yml  .winmake  AI.cpp  AI.h  ANALYSIS_VALIDATION.md  Account.cpp  Account.h  Africa.txt  Angle.h  Animation.cpp  Animation.h  Armament.cpp  Armament.h  AsteroidField.cpp  AsteroidField.h  Audio.cpp  Audio.h  BankPanel.cpp  BankPanel.h  BlurShader.cpp  BlurShader.h  BoardingPanel.cpp  BoardingPanel.h  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  Callback.h  CaptureOdds.cpp  CaptureOdds.h  (+242 more)
source/: #PlayerInfo.cpp#  .Plugins.cpp.swp  AI.cpp  AI.h  AbsoluteScreenSpace.cpp  AbsoluteScreenSpace.h  Account.cpp  Account.h  ActionResult.h  AfterburnerUsage.cpp  AfterburnerUsage.h  AlertLabel.cpp  AlertLabel.h  AmmoDisplay.cpp  AmmoDisplay.h  Angle.cpp  Angle.h  Animate.h  Animation.cpp  Animation.h  Archive.cpp  Archive.h  Armament.cpp  Armament.h  Asteroid.cpp  Asteroid.h  AsteroidBelt.cpp  AsteroidBelt.h  AsteroidField.cpp  AsteroidField.h  AtlasGlyphs.cpp  AtlasGlyphs.h  Attribute.cpp  Attribute.h  AttributeEffect.h  AttributeStore.cpp  AttributeStore.h  Audio.cpp  Audio.h  Audio_stub.cpp  (+757 more)
source/AI/: ShipAICache.cpp  ShipAICache.h
source/ai/: AI.cpp  AI.h  Command.cpp  FireCommand.cpp  FireCommand.h  FormationPattern.cpp  FormationPositioner.cpp  FormationPositioner.h  ShipAICache.cpp
source/attribute/: Attribute.cpp  Attribute.h  AttributeAccess.cpp  AttributeAccess.h  AttributeAccessor.cpp  AttributeAccessor.h  AttributeCategory.h  AttributeEffect.cpp  AttributeEffect.h  AttributeEffectType.h  Modifier.h
source/audio/: Audio.cpp  Audio.h  Music.cpp  Music.h  Music_stub.cpp  Playlist.cpp  Playlist.h  Sound.cpp  Sound.h  SoundCategory.h  Track.cpp  Track.h  minimp3.h
source/body/: Armament.cpp  Armament.h  AsteroidField.cpp  AsteroidField.h  Body.cpp  Body.h  CaptureOdds.cpp  CaptureOdds.h  CargoHold.cpp  CargoHold.h  Collision.h  CollisionSet.cpp  CollisionSet.h  CollisionType.h  DamageDealt.h  DamageProfile.cpp  DamageProfile.h  Effect.cpp  Effect.h  FighterHitHelper.h  Flotsam.cpp  Flotsam.h  Minable.cpp  Minable.h  Projectile.cpp  Projectile.h  Ship.cpp  Ship.h  ShipAICache.cpp  ShipAICache.h  StellarObject.cpp  StellarObject.h  Visual.cpp  Visual.h
source/collision/: Collision.h  CollisionSet.cpp  CollisionSet.h  CollisionType.h  DamageDealt.h  DamageProfile.cpp  DamageProfile.h  FighterHitHelper.h  Projectile.cpp  Projectile.h  Weapon.cpp  Weapon.h
source/comparators/: ByDisplayName.h  ByGivenOrder.h  ByName.h  ByPair.h  BySeriesAndIndex.h  ByUUID.h  UUIDComparator.h
source/concurrent/: LockProvider.cpp  LockProvider.h  Parallel.cpp  Parallel.h  PartiallyGuarded.h  PartiallyGuardedList.h  PartiallyGuardedMap.h  PartiallyGuardedVector.h  ResourceProvider.h  Scheduler.h  WithMutex.cpp  WithMutex.h
source/conditions/: ConditionAssignments.cpp  ConditionEntry.cpp  ConditionEntry.h  ConditionSet.cpp  ConditionsStore.cpp
source/data/: CategoryList.cpp  CategoryList.h  CategoryTypes.h  ConditionSet.cpp  ConditionSet.h  ConditionsStore.cpp  ConditionsStore.h  Conversation.cpp  Conversation.h  CoreStartData.cpp  CoreStartData.h  DataFile.cpp  DataFile.h  DataNode.cpp  DataNode.h  DataWriter.h  File.cpp  File.h  Files.cpp  Files.h  GameAction.cpp  GameAction.h  GameData.cpp  GameData.h  GameEvent.cpp  GameEvent.h  GameWindow.cpp  Gamerules.h  Government.cpp  Government.h  Hardpoint.cpp  Hardpoint.h  JumpTypes.h  LocationFilter.cpp  LocationFilter.h  Mission.cpp  Mission.h  MissionAction.cpp  MissionAction.h  NPC.cpp  (+28 more)
source/engine/: AI.cpp  AI.h  AlertLabel.cpp  AlertLabel.h  AmmoDisplay.cpp  Camera.h  Command.cpp  Command.h  Date.cpp  Date.h  Depreciation.cpp  Depreciation.h  DistanceCalculationSettings.cpp  DistanceCalculationSettings.h  DistanceMap.cpp  DistanceMap.h  Distribution.cpp  Distribution.h  Engine.cpp  Engine.h  EsUuid.cpp  EsUuid.h  EscortDisplay.cpp  FireCommand.h  Fleet.cpp  Fleet.h  FleetCargo.cpp  FleetCargo.h  Flotsam.cpp  Flotsam.h  FormationPattern.cpp  FormationPattern.h  FormationPositioner.cpp  FormationPositioner.h  FrameTimer.h  Message.cpp  Message.h  Messages.cpp  MiniMap.cpp  MiniMap.h  (+27 more)
source/files/: DataFile.cpp  DataNode.cpp  DataWriter.cpp  GameData.cpp  GameData.h  Logger.cpp  Plugins.cpp  Plugins.h  PrintData.cpp  SavedGame.cpp  TaskQueue.cpp  UniverseObjects.cpp  UniverseObjects.h  ZipFile.cpp
source/fleet/: Fleet.cpp  Fleet.h  FleetCargo.cpp  FleetCargo.h  Person.cpp  Person.h  Personality.cpp  Personality.h  RaidFleet.cpp  Variant.cpp
source/foundation/: Angle.h  Bitset.cpp  Color.cpp  ExclusiveItem.h  FireCommand.cpp  Logger.cpp  Point.cpp
source/gamedata/: DataFile.cpp  DataNode.cpp  Files.cpp  GameData.cpp  GameData.h  Plugins.cpp  UniverseObjects.cpp  UniverseObjects.h
source/gamepad/: DelaunayTriangulation.h  GamePad.cpp  GamePad.h  GamepadCursor.cpp  GamepadCursor.h  GamepadPanel.cpp  GamepadPanel.h
source/government/: Government.cpp  Government.h  Politics.cpp
source/hud/: AlertLabel.cpp  AmmoDisplay.cpp  AmmoDisplay.h  Camera.cpp  Effect.cpp  Effect.h  Engine.cpp  Engine.h  EscortDisplay.cpp  EscortDisplay.h  Flotsam.cpp  Flotsam.h  Message.cpp  Messages.cpp  MiniMap.cpp  PlanetLabel.cpp  Radar.cpp  Visual.h
source/image/: BlendingMode.h  Etc2RGBA.h  ImageBuffer.cpp  ImageBuffer.h  ImageFileData.cpp  ImageFileData.h  ImageSet.cpp  ImageSet.h  KtxFile.cpp  KtxFile.h  Mask.cpp  Mask.h  MaskManager.cpp  MaskManager.h  RenderBuffer.cpp  RenderBuffer.h  Sprite.cpp  Sprite.h  SpriteLoadManager.cpp  SpriteLoadManager.h  SpriteSet.cpp  SpriteSet.h
source/images/: MaskManager.cpp
source/main_view/: BoardingPanel.cpp  BoardingPanel.h  Engine.cpp  (+7 more)
tests/: .test-winmake  CMakeLists.txt  README.md  check_codeblocks.sh  check_coding_style.sh  check_xcode.sh  makefile  retryable_issues.txt  run_autotests.sh  run_tests.sh  run_tests_headless.sh  test_parse.ps1  test_parse.sh  try_xcode_fix.sh  xorg_dummy.conf
(+6014 files in other folders)
